2009-10-07  Daniel Kraft  <d@domob.eu>

PR fortran/41615
	* resolve.c (resolve_contained_fntype): Clarify error message for
	invalid assumed-length character result on module procedures.

2009-10-07  Daniel Kraft  <d@domob.eu>

	PR fortran/41615
	* gfortran.dg/assumed_charlen_function_6.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@152534 138bc75d-0d04-0410-961f-82ee72b054a4